--- a/README
+++ b/README
@@ -29,5 +29,6 @@ COMMAND LINE:
 > ./compile_charts.rb --help
 Usage: compile_charts.rb [options]
     -n, --no-data                    Skip data gathering
-    -c, --chart CHART
+    -c, --chart CHART                Update only the specified chart
+    -d, --delete CHART               Delete the specified chart
 
