Made an edit to FEATURES * Highly configurable <and editable>

--- a/README
+++ b/README
@@ -6,7 +6,7 @@ FEATURES
 * Generates and displays any number of charts on a single page
 * Password protected
 * Built-in support for importing Mixpanel data
-* Highly configurable
+* Highly configurable and editable
 
 SETUP
 
